# arxiv-search

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
backend/: requirements.txt  setup.cfg
backend/vecsim_app/: config.py  main.py  model.py  retrival.py  run.sh  spa.py
backend/vecsim_app/api/: routes.py
backend/vecsim_app/schema/: __init__.py  search.py
nbs/: arxiv-embeddings-colbert.ipynb  arxiv-embeddings.ipynb
vecsim/: Untitled1.ipynb  arxiv-embeddings-colbert.ipynb  arxiv_search.ipynb  colbert_model.py  delete_index.py  indexer-emb-visualizer.py  indexer.py  model.py  program.py  requirements.txt  retrival.py  tensor_board_embedding.py  tensorboard-embedding-visualizer.ipynb
