[metadata]
name = arXiv_vecsim
version=0.0.1
description = redis vector search Hackathon submission
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/shivkurtarkar/arxiv-search
project_urls =
    Source = https://github.com/shivkurtarkar/arxiv-search

author = Shivam Kurtarkar
author_email = shiv.kurtarkar@gmail.com
contact = Shivam Kurtarkar
contact_email = shiv.kurtarkar@gmail.com
license = MIT
keywords = redis, vector similarity, ai, machine learning
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools>=39.2
include_package_data = True
python_requires = >=3.7
install_requires =
    fastapi
    httpx
    requests
    uvicorn
    aiofiles
    redis-om
    pandas
    ipython
    numpy
    jinja2
    passlib
    bcrypt
    python-multipart
    pyjwt
    sentence-transformers
    torch
    transformers
    matplotlib    